Adicionando o scroll smothness nas anchoras
Adicionando o scroll smothness nas anchoras

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!--INÍCIO MENU-->
     <div class="mx-auto max-w-7xl px-2 my-2">
-      <h2 class="font-bold text-3xl mb-3" id="hamburguer">Hamburguer</h2>
+      <h2 class="font-bold text-3xl mb-3 mt-10" id="hamburguer">Hamburguer</h2>
     </div>
     <div id="menu">
       <main
