--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/favicon-podpa.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,7 +30,7 @@
           class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200"
         />
         <h1 class="text-4xl mt-4 mb-2 font-bold text-white mx-auto text-center">
-          Hamburgueria do bairro
+          PodPá Burguer
         </h1>
         <span class="text-white font-medium"
           >Rua Rosária Branca, 102, Jacareí - SP</span
