--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!--INÍCIO MENU-->
   <div class="mx-auto max-w-7xl px-2 my-2">
-    <h2 class="font-bold text-3xl mb-3 mt-10" id="hamburguer">Combos</h2>
+    <h2 class="font-bold text-3xl mb-3 mt-10" id="combos">Combos</h2>
   </div>
 
   <div id="menu">
@@ -275,7 +275,7 @@
 
   <div id="menu">
     <div class="mx-auto max-w-7xl px-2 my-2">
-      <h2 class="font-bold text-3xl mb-3 mt-10" id="hamburguer">Doces</h2>
+      <h2 class="font-bold text-3xl mb-3 mt-10" id="doces">Doces</h2>
     </div>
     <main class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
 
@@ -354,7 +354,7 @@
 
   <div id="menu">
     <div class="mx-auto max-w-7xl px-2 my-2">
-      <h2 class="font-bold text-3xl mb-3 mt-10" id="hamburguer">Acompanhamentos</h2>
+      <h2 class="font-bold text-3xl mb-3 mt-10" id="acompanhamentos">Acompanhamentos</h2>
     </div>
     <main class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
 
