Add anchor acompanhamentos
Add anchor acompanhamentos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href="#hamburguer" class="text-lg font-normal  hover:scale-110 duration-300">Hambugueres</a>
     <a href="#bebidas" class="text-lg font-normal hover:scale-110 duration-300">Bebidas</a>
     <a href="#doces" class="text-lg font-normal hover:scale-110 duration-300">Doces</a>
-    <a href="#acompanhamento" class="text-lg font-normal hover:scale-110 duration-300">Acompanhamentos</a>
+    <a href="#acompanhamentos" class="text-lg font-normal hover:scale-110 duration-300">Acompanhamentos</a>
 
   </nav>
   <!--FIM DO MENU INTERNO-->
