--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p class="font-bold">Combo pra casal</p>
           <p class="text-sm">
             2 Pães levinho de fermentação natural de trigo, burguer 160g, queijo
-            prato e maionese da casa, mais duas cocas
+            prato e maionese da casa, duas cocas e mais uma porção de batata-frita
           </p>
           <div class="flex items-center gap-2 justify-between mt-3">
             <p class="font-bold text-lg">R$ 68.90</p>
