--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 68.90</p>
-              <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Combo-pro-casal" data-price="68.90">
+              <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Combo pra casal" data-price="68.90">
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
             </div>
@@ -89,7 +89,7 @@
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 72.90</p>
-              <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="dupla-delicia" data-price="72.90">
+              <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Dupla delicia" data-price="72.90">
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
             </div>
